@@ -1,3 +1,7 @@
+2007-03-26  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/lib/xmlnode.cc: improved jadc2s compatibility
+
 2007-03-23  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/mio_tls.cc: fix bug in closing a socket
